Added all maven configs.

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,19 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+
+VERSION_NAME=0.0.1
+VERSION_CODE=1
+GROUP=com.github.shivthepro
+
+POM_DESCRIPTION=Created a view which looks alike Google Duo/WhatsApp VideoCall thumbnail which is draggable and sticks to corners on release
+POM_URL=https://github.com/shivthepro/StickyDraggableView
+POM_SCM_URL=https://github.com/shivthepro/StickyDraggableView
+POM_SCM_CONNECTION=scm:git@github.com:shivthepro/StickyDraggableView.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:shivthepro/StickyDraggableView.git
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=shivthepro
+POM_DEVELOPER_NAME=Shangeeth Sivan
